DTSRD-4960.Filtering records to remove nulls